- Fix Bug #35720 A final constructor can be overwritten